Olympus/src/objects/User.object
<CustomObject>
    <fields>
        <fullName>Apttus_Approval__Approval_Level__c</fullName>
        <description>Field moved to Approval Matrix table</description>
        <label>Approval Level_OBSOLETE</label>
        <picklist>
            <picklistValues>
                <fullName>Level 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Level 6</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Apttus_Approval__Next_Level_Approver__c</fullName>
        <description>Field moved to Approval Matrix table</description>
        <label>Next Level Approver_OBSOLETE</label>
        <relationshipName>Users</relationshipName>
        <restrictedAdminField>false</restrictedAdminField>
        <type>Hierarchy</type>
    </fields>
    <fields>
        <fullName>HSFE_Specialty__c</fullName>
        <label>Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Medical</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Sub_Specialty__c</fullName>
        <label>Sub Specialty</label>
        <picklist>
            <picklistValues>
                <fullName>Endoscopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical Endoscopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urology/Gynecology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EndoCapsule</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical AVI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>HSFE_Territory__c</fullName>
        <label>Territory</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <picklist>
            <picklistValues>
                <fullName>Surgical Endoscopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uro/Gyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical AVI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endoscopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medical IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Endo-Therapy</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rep_Type__c</fullName>
        <label>Rep Type</label>
        <picklist>
            <picklistValues>
                <fullName>ED</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical Endoscopy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uro Gyn</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Surgical AVI</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>ActiveUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.USERS.ACTIVE</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Active Users</label>
    </listViews>
    <listViews>
        <fullName>AdminUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CORE.PROFILE.NAME</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filters>
        <label>Admin Users</label>
    </listViews>
    <listViews>
        <fullName>AllUsers</fullName>
        <columns>FULL_NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>CORE.USERS.USERNAME</columns>
        <columns>CORE.USERS.LAST_LOGIN</columns>
        <columns>CORE.USER_ROLE.NAME</columns>
        <columns>CORE.USERS.ACTIVE</columns>
        <columns>CORE.PROFILE.NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Users</label>
    </listViews>
    <sharingModel>Read</sharingModel>
</CustomObject>